--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-DB_USER=root
-DB_PASSWORD=faizkhan
-DB_HOST=localhost
-DB_NAME=job_board_db
+DATABASE_URL=postgresql://postgres.fwanbtdkzwdzxruxreba:MadamIsMyLove@aws-1-ap-south-1.pooler.supabase.com:6543/postgres
